# marz

./: README.md  build.sh
protocolbuffer/: Im.Base.pb.cc  Im.Base.pb.h  Im.Buddy.pb.cc  Im.Buddy.pb.h  Im.File.pb.cc  Im.File.pb.h  Im.Group.pb.cc  Im.Group.pb.h  Im.Login.pb.cc  Im.Login.pb.h  Im.Message.pb.cc  Im.Message.pb.h  Im.Other.pb.cc  Im.Other.pb.h  Im.Query.pb.cc  Im.Query.pb.h  Im.Server.pb.cc  Im.Server.pb.h  Im.Session.pb.cc  Im.Session.pb.h  Im.SwitchService.pb.cc  Im.SwitchService.pb.h  Im.Test.pb.cc  Im.Test.pb.h
server/: build_balance.sh  build_gateway.sh  build_logic.sh  build_route.sh
server/balance/: BalanceSvr.cpp  CMakeLists.txt  ClientHandler.cpp  ClientHandler.h  SvrHandler.cpp  SvrHandler.h  SvrMgr.cpp  SvrMgr.h
server/gateway/: BalanceHandler.cpp  BalanceHandler.h  BalanceMgr.cpp  BalanceMgr.h  CMakeLists.txt  ClientHandler.cpp  ClientHandler.h  ClientMgr.cpp  ClientMgr.h  GatewaySvr.cpp  RouteHandler.cpp  RouteHandler.h  RouteMgr.cpp  RouteMgr.h  gateway_svr.conf
server/logic/: CMakeLists.txt
server/logic/data/cache/: CacheConnector.cpp  CacheConnector.h  CacheManager.cpp  CacheManager.h  CachePool.cpp  CachePool.h  cache.conf
server/logic/data/db/: DatabaseConnector.cpp  DatabaseConnector.h  DatabaseManager.cpp  DatabaseManager.h  DatabasePool.cpp  DatabasePool.h  PrepareStatement.cpp  PrepareStatement.h  ResultSet.cpp  ResultSet.h  database.conf
server/logic/group/: CMakeLists.txt  ClientHandler.cpp  GroupAction.cpp  GroupAction.h  GroupSvr.cpp  group_svr.conf
server/logic/login/: CMakeLists.txt  LoginAction.cpp  LoginAction.h  LoginModel.cpp  LoginModel.h  LoginSvr.cpp  login_svr.conf
server/logic/message/: CMakeLists.txt  ClientHandler.cpp  MessageAction.cpp  MessageAction.h  MessageSvr.cpp  message_svr.conf
server/logic/model/: AudioModel.cpp  AudioModel.h  GroupMessageModel.cpp  GroupMessageModel.h  GroupModel.cpp  GroupModel.h  MessageModel.cpp  MessageModel.h  RelationModel.cpp  RelationModel.h  SessionModel.cpp  SessionModel.h  UserModel.cpp  UserModel.h
server/logic/relation/: ClientHandler.cpp  ClientHandler.h  RelationAction.cpp  RelationAction.h  RelationSvr.cpp  relation_svr.conf
server/logic/session/: CMakeLists.txt  ClientHandler.cpp  SessionAction.cpp  SessionAction.h  SessionSvr.cpp  session_svr.conf
server/logic/user/: CMakeLists.txt  ClientHandler.cpp  UserAction.cpp  UserAction.h  UserModel.h  UserSvr.cpp  user_svr.conf
server/route/: CMakeLists.txt  GatewayHandler.cpp  GatewayHandler.h  GatewayMgr.cpp  GatewayMgr.h  GroupHandler.cpp  GroupHandler.h  GroupMgr.cpp  GroupMgr.h  LoginHandler.cpp  LoginHandler.h  LoginMgr.cpp  LoginMgr.h  MsgHandler.cpp  MsgHandler.h  MsgMgr.cpp  MsgMgr.h  RelationHandler.cpp  RelationHandler.h  RelationMgr.cpp  RelationMgr.h  RouteSvr.cpp  SessionHandler.cpp  SessionHandler.h  SessionMgr.cpp  SessionMgr.h  UserHandler.cpp  UserHandler.h  UserMgr.cpp  UserMgr.h
src/: Bootstrap.cpp  Bootstrap.h  CMakeLists.txt  Svr.h  Types.h
src/base/: Base64.cpp  Base64.h  Condition.cpp  Condition.h  Config.cpp  Config.h  Exception.cpp  Exception.h  IpParser.h  Lock.h  Logger.cpp  Logger.h  Md5.cpp  Md5.h  MinHeap.h  Mutex.h  NonCopyable.h  RingBuffer.cpp  RingBuffer.h  Singleton.h  Slice.h  SpringSplit.cpp  StringSplit.h  Task.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h  Timer.cpp  Timer.h  TimerId.h  Timestamp.cpp  Timestamp.h  Util.h
src/handler/: Attach.cpp  Attach.h  BufferStream.cpp  BufferStream.h  ByteStream.cpp  ByteStream.h  HttpContext.cpp  HttpContext.h  HttpHandler.cpp  HttpHandler.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  PacketHandler.cpp  PacketHandler.h  SimpleBuffer.cpp  SimpleBuffer.h
src/network/: Acceptor.cpp  Acceptor.h  Channel.cpp  Channel.h  Connector.cpp  Connector.h  EventLoopGroup.cpp  EventLoopGroup.h  Handler.cpp  Handler.h  HttpClient.cpp  HttpClient.h  IpAddress.cpp  IpAddress.h  SingleThreadEventLoop.cpp  SingleThreadEventLoop.h  Socket.cpp  Socket.h  SocketAcceptor.cpp  SocketAcceptor.h  SocketConnector.cpp  SocketConnector.h
src/reactor/: EventLoop.cpp  EventLoop.h  Handle.cpp  Handle.h  Selector.cpp  Selector.h
src/reactor/selector/: EpollSelector.cpp  EpollSelector.h  KqueueSelector.cpp  KqueueSelector.h
